@@ -39,6 +39,9 @@ class JFormFieldLanguage extends JFormFieldList
 		// Detect the native language.
 		jimport('joomla.language.helper');
 		$native = JLanguageHelper::detectLanguage();
+		if(empty($native)) {
+			$native = 'en-GB';
+		}
 
 		// Get a forced language if it exists.
 		$forced = $app->getLocalise();
